--- a/index.css
+++ b/index.css
@@ -39,6 +39,10 @@ body, html {
     margin: 0 10px;
 }
 
+.navigation #links a:hover {
+    text-decoration: underline;
+}
+
 #icon-close {
     display: none;
 }
@@ -48,6 +52,11 @@ body, html {
     border: 0px solid black;
     padding: 15px;
     cursor: pointer;
+}
+
+.arrow-btn:hover {
+    background-color: hsl(0, 0%, 27%);
+    border: 0px solid hsl(0, 0%, 27%);
 }
 
 .arrow-btn img {
@@ -69,8 +78,57 @@ body, html {
     float: right;
 }
 
-P {
-    color: hsl(0, 0%, 63%)
+.section-2, .section-4 {
+    padding: 0 30px;
+}
+
+P[class="body-text"] {
+    color: hsl(0, 0%, 63%);
+    font-weight: 500;
+    line-height: 22px;
+}
+
+p[class="heading-text-lg"] {
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: -2px;
+    line-height: 40px;
+    margin-bottom: 18px;
+}
+
+p[class="heading-text-sm"] {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 5px;
+    margin-bottom: 18px;
+}
+
+.shop-now-group {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    align-items: baseline;
+    cursor: pointer;
+}
+
+.shop-now-group:hover {
+    color: hsl(0, 0%, 63%);
+    cursor: pointer;
+}
+
+button[class="shop-now-btn"] {
+    border-style: none;
+    background-color: white;
+    /* margin-bottom: 70px; */
+}
+
+p[class="btn-text"] {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 15px;
 }
 
 
