--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
     margin: 0;
     background-color: white;
     height: 100%;
@@ -9,26 +10,85 @@ body, html {
     height: 100%;
 }
 
-
-
-/* .section-3 {
-    background-image: url("./images/mobile-image-about-dark.jpg");
-    height: auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative; 
+.navigation #links a {
+    text-decoration: none;
+    color: hsl(0, 0%, 0%);
+    font-weight: 600;
+    margin: 0 10px;
 }
 
-.section-5 {
-    background-image: url("./images/mobile-image-about-light.jpg");
-    height: auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative; 
-} */
+.navigation #links a:hover {
+    text-decoration: underline;
+}
 
+.arrow-btn {
+    background-color: black;
+    border: 0px solid black;
+    padding: 15px;
+    cursor: pointer;
+}
+
+.arrow-btn:hover {
+    background-color: hsl(0, 0%, 27%);
+    border: 0px solid hsl(0, 0%, 27%);
+}
+
+#arrow-left {
+    float: left;
+}
+
+#arrow-right {
+    float: right;
+}
+
+P[class="body-text"] {
+    color: hsl(0, 0%, 63%);
+    font-weight: 500;
+    line-height: 22px;
+}
+
+p[class="heading-text-lg"] {
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: -2px;
+    line-height: 40px;
+    /* margin-bottom: 18px; */
+}
+
+p[class="heading-text-sm"] {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 5px;
+    /* margin-bottom: 18px; */
+}
+
+.shop-now-group {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    align-items: baseline;
+    cursor: pointer;
+}
+
+.shop-now-group:hover {
+    color: hsl(0, 0%, 63%);
+    cursor: pointer;
+}
+
+button[class="shop-now-btn"] {
+    border-style: none;
+    background-color: white;
+    /* margin-bottom: 70px; */
+}
+
+p[class="btn-text"] {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 15px;
+}
 
 .attribution {
     font-size: 11px;
@@ -39,7 +99,9 @@ body, html {
     color: hsl(228, 45%, 44%);
 }
 
-@media screen and (min-width: 1000px) {
+
+
+@media screen and (min-width: 900px) {
     .container {
         display: grid;
         height: 100%;
@@ -47,18 +109,19 @@ body, html {
         /* grid-auto-rows: minmax(100px, auto); */
         grid-template-areas:
 
-        "hero hero hero hero hero hero hero main main main main main"
-        "hero hero hero hero hero hero hero main main main main main"
-        "ab1  ab1  ab1  ab2  ab2  ab2  ab2  ab2  ab2  ab3  ab3  ab3"
-        
+            "hero hero hero hero hero hero hero main main main main main"
+            "hero hero hero hero hero hero hero main main main main main"
+            "ab1  ab1  ab1  ab1  ab2  ab2  ab2  ab2  ab2  ab3  ab3  ab3"
+
     }
 
     .hero-img {
-        background-image: url("./images/mobile-image-hero-1.jpg");
+        background-image: url("./images/desktop-image-hero-1.jpg");
         /* height: auto; */
         background-repeat: no-repeat;
-        background-size: cover;
-        position: relative; 
+        background-size: 100% 100%; /*100% 100%    contain*/
+        /* background-position:center; */
+        /* position: relative; */
 
         grid-area: hero;
         border: 1px solid purple;
@@ -68,13 +131,18 @@ body, html {
         grid-area: main;
         position: relative;
         border: 1px solid red;
+
+        align-content: center;
+        justify-content: center;
+
+        margin: 0 auto;
     }
 
     .section-3 {
         background-image: url("./images/image-about-dark.jpg");
         background-repeat: no-repeat;
-        background-size: contain;
-        position: relative; 
+        background-size: 100% 100%;
+        position: relative;
 
         grid-area: ab1;
         border: 1px solid blue;
@@ -83,83 +151,60 @@ body, html {
     .section-4 {
         grid-area: ab2;
         border: 1px solid green;
+        /* padding: 20px 40px; */
+        /* padding-left: 50px;
+        padding-right: 50px; */
+        margin: 0 auto;
+        align-content: center;
+        justify-content: center;
+        position: inherit;
+    }
+
+    .section-4 p {
+        /* padding-left: 50px;
+        padding-right: 50px; */
     }
 
     .section-5 {
         background-image: url("./images/image-about-light.jpg");
         background-repeat: no-repeat;
-        height: auto;
-        background-size: contain;
-        position: relative; 
+        background-size: 100% 100%;
+        position: relative;
 
         grid-area: ab3;
         border: 1px solid yellow;
+        width: 100%;
+        height: auto;
     }
 
     .button-group {
+       display: none;
+    }
+
+    .button-group-section-2 {
         position: absolute;
-        bottom: 120;
-        right: 0px;
+        bottom: 0;
+        right: 50;
         display: inline-block;
     }
 
-
-    /* .hero-img {
-        border: 1px solid purple;
-        grid-column-start: 1;
-        grid-column-end: 11;
-        
-    } */
-
-    /* .section-2 {
-        border: 1px solid red;
-        grid-column-start: 11;
-        grid-column-end: 16;
-        
+    #icon-open,
+    #icon-close {
+        display: none;
     }
-
-    .hero-img, .section-2 {
-        grid-row-start: 1;
-        grid-row-end: 5;
-    }
-
-    .section-3 {
-        border: 1px solid blue;
-        grid-column: 1 / span 4;
-    }
-
-    .section-4 {
-        border: 1px solid green;
-        grid-column: 5 / span 10;
-    }
-
-    .section-5 {
-        border: 1px solid yellow;
-        grid-column: 10 / span 14;
-    }
-
-    .section-3, .section-4, .section-5 {
-        grid-row-start: 5;
-        grid-row-end: 5;
-    } */
-
-    /* .section-3 img, .section-5 img {
-        height: 100%;
-        width: auto;
-    } */
-
 
 }
 
-@media  screen and (max-width: 375px) {
+@media screen and (max-width: 899px) {
 
-    
+
     .hero-img {
         background-image: url("./images/mobile-image-hero-1.jpg");
-        height: 45%;
+        height: 43%;
         background-repeat: no-repeat;
-        background-size: contain;
-        position: relative; 
+        background-size: cover;
+        position: relative;
+        border: 1px solid red;
     }
 
     .section-3 {
@@ -173,7 +218,7 @@ body, html {
         margin-top: 50px;
         margin-bottom: 50px;
     }
-    
+
     .section-5 {
         background-image: url("./images/image-about-light.jpg");
         height: 30%;
@@ -181,24 +226,23 @@ body, html {
         background-repeat: no-repeat;
         background-size: cover;
     }
-    
-    
+
+
     .navigation {
         overflow: hidden;
         position: relative;
         padding: 50px 20px;
-        
     }
-    
+
     .navigation a {
         margin: 0 20px;
     }
-    
+
     .navigation #links {
         display: none;
     }
-    
-    .navigation #links a {
+
+    /* .navigation #links a {
         text-decoration: none;
         color:  hsl(0, 0%, 0%);
         font-weight: 600;
@@ -207,93 +251,51 @@ body, html {
     
     .navigation #links a:hover {
         text-decoration: underline;
-    }
-    
+    } */
+
     #icon-close {
         display: none;
     }
-    
-    .arrow-btn {
-        background-color: black;
-        border: 0px solid black;
-        padding: 15px;
-        cursor: pointer;
-    }
-    
-    .arrow-btn:hover {
-        background-color: hsl(0, 0%, 27%);
-        border: 0px solid hsl(0, 0%, 27%);
-    }
-    
-    .arrow-btn img {
-        
-    }
-    
+
     .button-group {
         position: absolute;
-        bottom: 120;
-        right: 0px;
+        bottom: 0;
+        right: 0;
         display: inline-block;
     }
-    
-    #arrow-left {
-        float: left;
-    }
-    
-    #arrow-right {
-        float: right;
-    }
-    
-    .section-2, .section-4 {
+
+    .button-group-section-2 {
+        display: none;
+     }
+
+    .section-2,
+    .section-4 {
         padding: 0 30px;
     }
-    
-    P[class="body-text"] {
-        color: hsl(0, 0%, 63%);
-        font-weight: 500;
-        line-height: 22px;
-    }
-    
+
     p[class="heading-text-lg"] {
-        font-size: 40px;
+        /* font-size: 40px;
         font-weight: 600;
         letter-spacing: -2px;
-        line-height: 40px;
+        line-height: 40px; */
         margin-bottom: 18px;
     }
-    
+
     p[class="heading-text-sm"] {
-        font-size: 15px;
+        /* font-size: 15px;
         text-transform: uppercase;
         font-weight: 700;
-        letter-spacing: 5px;
+        letter-spacing: 5px; */
         margin-bottom: 18px;
     }
-    
+
     .shop-now-group {
-        display: flex;
-        flex-direction: row;
+        /* display: flex;
+        flex-direction: row; */
         margin-top: 10px;
         margin-bottom: 50px;
-        align-items: baseline;
-        cursor: pointer;
+        /* align-items: baseline;
+        cursor: pointer; */
     }
-    
-    .shop-now-group:hover {
-        color: hsl(0, 0%, 63%);
-        cursor: pointer;
-    }
-    
-    button[class="shop-now-btn"] {
-        border-style: none;
-        background-color: white;
-        /* margin-bottom: 70px; */
-    }
-    
-    p[class="btn-text"] {
-        font-size: 15px;
-        text-transform: uppercase;
-        font-weight: 600;
-        letter-spacing: 15px;
-    } 
+
 }
