--- a/index.css
+++ b/index.css
@@ -95,13 +95,13 @@ p[class="btn-text"] {
     .container {
         display: grid;
         height: 100%;
-        grid-template-columns: repeat(12, 1fr);
-        grid-auto-rows: minmax(300px, auto);
+        grid-template-columns: .9fr 1fr .35fr .9fr;
+        grid-auto-rows: 65% 35%;
         grid-template-areas:
 
-            "hero hero hero hero hero hero hero main main main main main"
-            "ab1  ab1  ab1  ab2  ab2  ab2  ab2  ab2  ab2  ab3  ab3  ab3"
-
+            "hero hero main main"
+            "ab1  ab2  ab2  ab3"
+        ;
     }
 
     .hero-img {
@@ -155,19 +155,18 @@ p[class="btn-text"] {
     }
 
     .button-group {
-       display: none;
+        display: none;
     }
 
     .button-group-section-2 {
         position: absolute;
         bottom: 0;
-        /* right: 50; */
         left: 0;
         display: inline-block;
     }
 
     .button-group-section-2 .arrow-btn {
-        padding: 25px;
+        padding: 25px 33px;
     }
 
     #icon-open,
@@ -191,7 +190,7 @@ p[class="btn-text"] {
         font-weight: 600;
         margin: 0 10px;
         width: 50%;
-     
+
     }
 
     .navigation #links a:hover {
@@ -203,8 +202,6 @@ p[class="btn-text"] {
 }
 
 @media screen and (max-width: 899px) {
-
-
     .hero-img {
         background-image: url("./images/mobile-image-hero-1.jpg");
         height: 43%;
